[FIX] Mobile : align

--- a/mythicals.scss
+++ b/mythicals.scss
@@ -91,7 +91,7 @@ body[data-myt_background_style='3']{//PREF_BACKGROUND_DARK
     #myt_board_zone{
         //width: 80%;
         max-width: 80%;
-        align-self: baseline;
+        align-self: start;
     }
 }
 
